# inbox

./: CLAUDE.md  Cargo.toml  Dockerfile.test  LICENSE  README.md  test_inbox.sh
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-07-inbox.md
docs/superpowers/specs/: 2026-05-07-inbox-design.md
src/: cli.rs  config.rs  ephemeral.rs  error.rs  main.rs  profile.rs  review.rs  rules.rs  snapshot.rs  spawner.rs
src/linux/: mod.rs
src/macos/: mod.rs  sbpl.rs
tests/: integration_test.rs
