[package]
name = "inbox"
version = "0.1.0"
edition = "2021"
description = "Run commands in a sandboxed filesystem environment"
license = "MIT"
repository = "https://github.com/avbel/inbox"

[[bin]]
name = "inbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
glob = "0.3"
walkdir = "2"
nix = { version = "0.29", features = ["fs", "process", "signal", "term", "ioctl", "user"] }
ratatui = "0.29"
crossterm = "0.28"
tempfile = "3"
similar = { version = "2", features = ["text"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
